crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_screen_taxonomy.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "SingleEnd",
      "PairedEnd",
      "Merged"
    ],
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Contamination"
    ],
    "invariants": [
      "contamination_rate in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "Screening reports contamination only."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly",
    "possible_kinds": [
      "StatsOnly",
      "TaxonomyMapping"
    ]
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.screen_taxonomy",
  "tool_ids": [
    "kraken2",
    "krakenuniq",
    "centrifuge",
    "kaiju"
  ]
}
